src/objects/LG_ServiceRequestUrl__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>URL for REST API call from Service Availability Visualforce Page</description>
    <fields>
        <fullName>LG_AddressCheck__c</fullName>
        <description>Holds the address check endpoint (i.e. NAMED_CREDENTIAL_NAME/peal/api/addresses/</description>
        <label>Address Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AvailabilityCheck__c</fullName>
        <description>Holds the availability check endpoint (i.e. NAMED_CREDENTIAL_NAME/peal/api/addresses/{addressId}/details</description>
        <label>Availability Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LocalizationClass__c</fullName>
        <description>Holds the name of the implementation class that extends the LG_EndpointResolver class and that holds the overridden getAddressCheckEndpoint and getAvailabilityCheckEndpoint methods responsible for concatenating and creating the complete endpoint url.</description>
        <label>Localization class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderRequestNew__c</fullName>
        <label>Order Request New</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Service Request URL</label>
</CustomObject>